other-cel/allowed-annotations/.chainsaw-test/podcontroller-bad.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: busybox
  name: baddeployment01
spec:
  replicas: 1
  selector:
    matchLabels:
      app: busybox
  strategy: {}
  template:
    metadata:
      annotations:
        foo: bar
        fluxcd.io/foo: bar
      labels:
        app: busybox
    spec:
      containers:
        - name: bb-01
          image: busybox:1.35
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: busybox
  name: baddeployment02
spec:
  replicas: 1
  selector:
    matchLabels:
      app: busybox
  strategy: {}
  template:
    metadata:
      annotations:
        fluxcd.io/cat: meow
        fluxcd.io/cow: moo
      labels:
        app: busybox
    spec:
      containers:
        - name: bb-01
          image: busybox:1.35
