other-cel/allowed-annotations/.chainsaw-test/policy-ready.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: allowed-annotations
status:
  ready: true
